# esp32AssitCpp

./: .clangd  .env.example  .gitignore  ARQUITECTURA.md  CMakeLists.txt  ESTADO_PROYECTO.md  GUIA_INICIO_RAPIDO.md  readme.md  readme.org  sdkconfig  sdkconfig.old  supabase_setup.sql
.cache/clangd/index/: LCDI2C.cpp.CAD0F2CA8B8D4B41.idx  LCDI2C.hpp.7A99BAF94C608F92.idx  main.cpp.448972DFFAADDFA0.idx  ssd1306.c.0185981A0B989061.idx  ssd1306.h.F9A874F5342F1192.idx  ssd1306_fonts.c.8D64373CC6933148.idx  ssd1306_fonts.h.BBFFEAF7F53DCA9B.idx
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/modules/: AccessControl.cpp  AccessControl.hpp  AccessDB.cpp  AccessDB.hpp  FingerprintManager.cpp  FingerprintManager.hpp  Indicators.cpp  Indicators.hpp  JsonParser.cpp  JsonParser.hpp  LCDI2C.cpp  LCDI2C.hpp  RFIDManager.cpp  RFIDManager.hpp  ServoManager.cpp  ServoManager.hpp  WifiDriver.cpp  WifiDriver.hpp
